k8scfg/tomcat-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deploy
  namespace: pramanouski
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat-pramanouski-container
        image: registry-ci.playpit.by/helloworld-pramanouski:TAG
        ports:
        - containerPort: 8080
