k8scfg/tomcat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: pramanouski
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: tomcat
